<resources>

    <string name="app_name" translatable="false">SpellNote</string>

    <string name="title_activity_view_documents">Documents</string>
    <string name="title_activity_select_languages">Select Languages</string>
    <string name="title_activity_about">About SpellNote</string>
    <string name="title_add_dictionaries">Add Dictionaries</string>

    <string name="navigation_drawer_open">Drawer opened</string>
    <string name="navigation_drawer_close">Drawer closed</string>
    <string name="nav_documents">Documents</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_dictionaries">My dictionaries</string>
    <string name="nav_remove_ads">Remove Ads</string>
    <string name="nav_send_feedback">Send feedback</string>
    <string name="nav_rate">Rate on Play Store</string>
    <string name="nav_about">About us</string>


    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_date_modified">Date modified</string>
    <string name="action_sort_by_title">Title</string>
    <string name="action_sort_by_language">Language</string>
    <string name="action_sort_by_ascending">Ascending</string>
    <string name="action_empty_trash">Empty Trash</string>
    <string name="action_title_show_suggestions">Show suggestions</string>
    <string name="action_title_hide_suggestions">Hide suggestions</string>
    <string name="action_title_overflow_menu">More options</string>
    <string name="action_title_record">Record</string>
    <string name="action_title_send">Send</string>
    <string name="action_title_copy">Copy</string>
    <string name="action_title_check_spelling">Check Spelling</string>
    <string name="action_title_add_word_to_dictionary">Add word to dictionary</string>
    <string name="action_title_remove_word_from_dictionary">Remove word from dictionary</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_open_source_licenses">Open source licenses</string>


    <string name="advertisement_thank_you_message">Thanks for supporting SpellNote!</string>
    <string name="advertisement_purchase_failure">Please try again later</string>
    <string name="advertisement_loading_description">Loading advertisement…</string>

    <string name="hint_edit_document_title">Title…</string>
    <string name="hint_edit_content">Type the text here…</string>
    <string name="hint_choose_image">Choose an image…</string>
    <string name="hint_choose_email_client">Choose an Email client…</string>
    <string name="hint_sent_file">Send Message…</string>
    <string name="hint_move_to_documents">Move to Documents</string>
    <string name="hint_move_to_archive">Move to Archive</string>
    <string name="hint_move_to_trash">Move to Trash</string>
    <string name="hint_restore">Restore</string>
    <string name="hint_unarchive">Unarchive</string>
    <string name="hint_remove_forever">Remove Forever</string>
    <string name="hint_send">Send</string>
    <string name="undo">UNDO</string>
    <string name="explanation_unarchived">Unarchived</string>
    <string name="explanation_archived">Archived</string>
    <string name="explanation_moved_to_trash">Moved to Trash</string>
    <string name="explanation_restored">Restored</string>
    <string name="explanation_removed_forever">Removed Forever</string>
    <string name="explanation_removed">Document removed</string>
    <string name="explanation_document_not_editable">Restore document to edit…</string>

    <string name="empty_archive">No items in Archive</string>
    <string name="empty_trash">No items in Trash</string>
    <string name="empty_document">Create a new Document</string>


    <string name="request_update_or_delete_dictionary">Update or Delete the dictionary?</string>
    <string name="update_or_delete_dictionary_option_update">Update</string>
    <string name="update_or_delete_dictionary_option_delete">Delete</string>

    <string name="request_remove_all_documents">Remove all document in Trash?</string>
    <string name="request_remove_all_documents_option_yes">Yes</string>
    <string name="request_remove_all_documents_option_cancel">Cancel</string>


    <string name="error_something_wrong">Something went wrong</string>
    <string name="error_couldnt_create_document">Couldn\'t create document</string>
    <string name="error_no_email_clients">There are no Email applications installed</string>
    <string name="error_no_messaging_apps">There are no messaging applications installed</string>
    <string name="error_no_speech_recognizer">Speech recognizer not found on your device</string>
    <string name="error_no_clipboard">No clipboard found</string>
    <string name="message_copied_to_clipboard">Text copied to clipboard</string>
    <string name="error_no_text_found">No text found</string>
    <string name="error_no_permission_granted">Error! Permission not granted</string>

    <string name="dictionary_download_canceled">Download canceled</string>
    <string name="dictionary_error_save_failure">Couldn\'t save dictionary</string>
    <string name="dictionary_error_delete_failure">Couldn\'t delete dictionary</string>
    <string name="dictionary_message_updated">Dictionary updated</string>
    <string name="dictionary_install_in_progress">Dictionary installation in progress…</string>

    <string name="tutorial_show_suggestions">Show or hide Suggestions</string>
    <string name="tutorial_swipe">◄◄◄ Swipe left documents to Delete, Send, etc…\n(tap to dismiss)</string>
    <string name="tutorial_select_dictionaries">Select Dictionaries to use later on…</string>
    <string name="tutorial_add_word_to_dictionary">Add word to Dictionary</string>


    <string name="privacy_policy_url" translatable="false">https://martinxpn.github.io/SpellNote/PRIVACY_POLICY</string>
    <string name="about_app">
        SpellNote is an app designed for creating texts, taking notes, editing and correcting essays, etc. It can be used any time even without an internet access.\n\n
        The app supports several languages, including English, Russian and Armenian.\n\n
        It\'s an open-source <a href="https://github.com/MartinXPN/SpellNote">project</a> done mainly for educational reasons.\n
    </string>
    <string name="about_author">© 2019 <a href="https://www.linkedin.com/in/martin-mirakyan-945597101">Martin Mirakyan</a>\nAll Rights Reserved.</string>
</resources>
