<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_document"
            android:title="@string/nav_documents" />

        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive_black"
            android:title="@string/nav_archive" />

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash_black"
            android:title="@string/nav_trash" />
    </group>


    <item android:title="@null">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/nav_send_feedback" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>